Fix grid squares stretching

--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 .container{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     background-color: aqua;
-    width: 600px;
+    width: 400px;
     height: 400px;
     margin: auto;
     margin-top: 100px;
 }
 
 .container-item{
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: rosybrown;
     border: 1px solid rgba(0, 0, 0, 0.8);
     text-align: center;
-    font-size: 40px;
+    font-size: 45px;
 }
